--- a/index.html
+++ b/index.html
@@ -8,14 +8,43 @@
     <link rel='stylesheet' href='style.css'>
 </head>
 <body>
-    <h1>Titre</h1>
-        <ol>
-            <ul>pancake</ul>
-            <ul>croissant</ul>
-        </ol>
-        <ol>
-            <ul>beurre</ul>
-            <ul>choufleur</ul>
-        </ol>
+    <header>
+      <title>Reservia</title>
+      <nav>
+        <div>Hébergements</div>
+        <div>Activités</div>
+        <div>S'inscrire</div>
+      </nav>
+    </header>
+    <main>
+      <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+      <h3>En plein centre ville ou en pleine nature</h3>
+      <div id="recherche">
+        <img src="" alt="">
+       <form action="">
+         <label for=""></label>
+         <input type="text">
+       </form> 
+      </div>
+      <form action="">
+        <label for=""></label>
+      </form>
+      <section>
+        <section>
+          <h2></h2>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <h3></h3>
+        </section>
+        <aside></aside>
+      </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
