--- a/index.html
+++ b/index.html
@@ -1,50 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Test gitpen</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' href='style.css'>
-</head>
-<body>
-    <header>
-      <title>Reservia</title>
-      <nav>
-        <div>Hébergements</div>
-        <div>Activités</div>
-        <div>S'inscrire</div>
-      </nav>
-    </header>
-    <main>
-      <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-      <h3>En plein centre ville ou en pleine nature</h3>
-      <div id="recherche">
-        <img src="" alt="">
-       <form action="">
-         <label for=""></label>
-         <input type="text">
-       </form> 
-      </div>
-      <form action="">
-        <label for=""></label>
-      </form>
-      <section>
+  <head>
+      <meta charset='utf-8'>
+      <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+      <script src="https://kit.fontawesome.com/a67f2c9a44.js" crossorigin="anonymous"></script>
+      <title>Test gitpen</title>
+      <meta name='viewport' content='width=device-width, initial-scale=1'>
+      <link rel='stylesheet' href='style.css'>
+  </head>
+  <body>
+      <header>
+        <title>Reservia</title><i class="fas fa-dog"></i>
+        <nav>
+          <div>Hébergements</div>
+          <div>Activités</div>
+          <div>S'inscrire<i class="fas fa-heart"></i>
+          </div>
+        </nav>
+      </header>
+      <main>
+        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+        <h3>En plein centre ville ou en pleine nature</h3>
+        <div id="recherche">
+          <img src="" alt="">
+        <form action="">
+          <label for=""></label>
+          <input type="text">
+        </form> 
+        </div>
+        <form action="">
+          <label for=""></label>
+        </form>
         <section>
-          <h2></h2>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <h3></h3>
+          <section>
+            <h2></h2>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <h3></h3>
+          </section>
+          <aside></aside>
         </section>
-        <aside></aside>
-      </section>
-    </main>
-    <footer>
+      </main>
+      <footer>
 
-    </footer>
-</body>
+      </footer>
+  </body>
 </html>
