--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <h1 id="marque">Reservia</h1>
+            <h1 id="marque"><img src="./images/logo/Reservia.svg" alt=""></h1>
             <nav class="nav-up">
                 <li><a href="https://fontawesome.com/">Hébergements</a></li>
                 <li><a href="https://flexboxfroggy.com/#fr">Activités</a></li>
@@ -47,7 +47,7 @@
                     <h2>Hébergements à Marseille</h2>
                     <section id="grp-pic">
                         <div class="phototel">
-                            <img src="pic/pexels-julie-aagaard-2467285.jpg" alt="" width="300px" height="220px" style="border-radius: 10%;">
+                            <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="" width="300px" height="220px" style="border-radius: 10%;">
                             <h3>Auberge La Cannebière</h3>
                             <h4>Nuit à partir de 25euros</h4>
                             <div class="star">
