--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </form>
                 </div>
             </section>
-            <section class="" >
+            <section class="pilier" >
                 <section id="gdpic">
                     <h2>Hébergements à Marseille</h2>
                     <section id="grp-pic">
@@ -61,7 +61,7 @@
                         <div class="phototel">
                             <img src="pic/pexels-photo-4760127.jpeg" alt="" width="300px" height="220px">
                             <h3>Hôtel Du Port</h3>
-                            <h4>Nuit àparir de 52euros</h4>
+                            <h4>Nuit à partir de 52euros</h4>
                             <div class="star">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
