--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h2>Hébergements à Marseille</h2>
                     <section id="grp-pic">
                         <div class="phototel">
-                            <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="" width="300px" height="220px" style="border-radius: 10%;">
+                            <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="" width="300px" height="220px" style="border-radius: 10%;">
                             <h3>Auberge La Cannebière</h3>
                             <h4>Nuit à partir de 25euros</h4>
                             <div class="star">
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                         <div class="phototel">
-                            <img src="pic/pexels-photo-4760127.jpeg" alt="" width="300px" height="220px">
+                            <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="" width="300px" height="220px">
                             <h3>Hôtel Du Port</h3>
                             <h4>Nuit à partir de 52euros</h4>
                             <div class="star">
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                         <div class="phototel">
-                            <img src="pic/pexels-photo-2351290.jpeg" alt="" width="300px" height="220px">
+                            <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="" width="300px" height="220px">
                             <h3>Hôtel Les Mouettes</h3>
                             <h4>Nuit à partir de 76euros</h4>
                             <div class="star">
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                         <div class="phototel">
-                            <img src="pic/pexels-photo-2373201.jpeg" alt="" width="300px" height="220px">
+                            <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="" width="300px" height="220px">
                             <h3>Hôtel De La Mer</h3>
                             <h4>Nuit à partir de 46euros</h4>
                             <div class="star" >
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                         <div class="phototel">
-                            <img src="pic/pexels-photo-3201765.jpeg" alt="" width="300px" height="220px">
+                            <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="" width="300px" height="220px">
                             <h3>Auberge Le Panier</h3>
                             <h4>Nuit à partir de 23euros</h4>
                             <div class="star">
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                         <div class="phototel">
-                            <img src="pic/pexels-photo-3754595" alt="" width="300px" height="220px">
+                            <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="" width="300px" height="220px">
                             <h3>Hôtel Chez Amina</h3>
                             <h4>Nuit à partir de 96euros</h4>
                             <div class="star">
@@ -119,13 +119,16 @@
                             </div>
                         </div>
                     </section>
-                    <h3><a href="https://grafikart.fr/" target="_blank">Afficher plus</a></h3>
+                    <h3>
+                        <a href="https://grafikart.fr/" target="_blank">Afficher plus</a>
+                    </h3>
                     
                 </section>
                 <aside>
-                    <div>
-                        <h2>Les plus populaires</h2>
-                        <div><i class="fas fa-chart-line"></i></div>
+                    <div id="popul">
+                            <h2>Les plus populaires</h2>
+                            <div id="courb"><i class="fas fa-chart-line"></i>
+                        </div>
                     </div>
                   <div>
                     <div class="picaside">
