reglages des box

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <header>
-            <h1 id="marque"><img src="./images/logo/Reservia.svg" alt=""></h1>
+            <div id="marque"><img src="./images/logo/Reservia.svg" alt="" ></div>
             <nav class="nav-up">
-                <li><a href="https://fontawesome.com/">Hébergements</a></li>
-                <li><a href="https://flexboxfroggy.com/#fr">Activités</a></li>
+                <li><a href="#hebrgMars">Hébergements</a></li>
+                <li><a href="#activt">Activités</a></li>
                 <li><a href="https://openclassrooms.com/fr/">S'inscrire</a></li>
             </nav>
         </header>
@@ -44,11 +44,11 @@
             </section>
             <section class="pilier" >
                 <section id="gdpic">
-                    <h2>Hébergements à Marseille</h2>
+                    <h2 id="hebrgMars">Hébergements à Marseille</h2>
                     <section id="grp-pic">
                         <div class="phototel">
                             <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="" width="300px" height="220px" style="border-radius: 10%;">
-                            <h3>Auberge La Cannebière</h3>
+                            <h3 >Auberge La Cannebière</h3>
                             <h4>Nuit à partir de 25euros</h4>
                             <div class="star">
                                 <i class="fas fa-star"></i>
@@ -131,33 +131,38 @@
                         </div>
                     </div>
                   <div>
-                    <div class="picaside">
-                        <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="">
-                        <h3>Hôtel Le Soleil Du Matin</h3>
-                        <h4>Nuit à partir de 128euros</h4>
-                        <div class="star" >
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                    <div id="1" class="picaside">
+                        <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="" width="300px" height="220px">
+                        <div class="haside">
+                            <h3>Hôtel Le Soleil Du Matin</h3>
+                            <h4>Nuit à partir de 128euros</h4>
+                            <div class="star" >
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
                         </div>
                     </div>
-                    <div>
-                        <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="">
-                        <h3>Au coeur de l'eau Chambres d'hôtes</h3>
-                        <h4>Nuit à partir de 71euros</h4>
-                        <div class="star">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fal fa-star"></i>
+                    <div id="2" class="picaside">
+                        <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="" width="300px" height="220px">
+                        <div class="haside">
+                            <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                            <h4>Nuit à partir de 71euros</h4>
+                            <div class="star">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fal fa-star"></i>
+                            </div
                         </div>
                     </div>
-                    <div>
-                        <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="">
-                        <h3>Hôtel Tout Bleu et Blanc</h3>
+                    <div id="3" class="picaside">
+                        <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="" width="300px" height="220px">
+                        <div class="haside">
+                            <h3>Hôtel Tout Bleu et Blanc</h3>
                         <h4>Nuit à partir de 68euros</h4>
                         <div class="star"  >
                             <i class="fas fa-star"></i>
@@ -166,38 +171,39 @@
                             <i class="fas fa-star"></i>
                             <i class="fal fa-star"></i>
                         </div>
+                        </div>
                     </div>
                   </div>
                 </aside>
             </section>
             <section>
-                <h2>Activités à Marseille</h2>
+                <h2 id="activt">Activités à Marseille</h2>
                 <div class="grppic" >
                     <div>
-                        <img src="" alt="">
+                        <img src="./images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
                         <h4>Vieux Port</h4>
                     </div>
                     <div>
                         <div>
-                            <img src="" alt="">
+                            <img src="./images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
                             <h4>Fort de Pomègues</h4>
                         </div>
                         <div>
-                            <img src="" alt="">
+                            <img src="./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
                             <h4>îles du Frioul</h4>
                         </div>
                     </div>
                     <div>
-                        <img src="" alt="">
+                        <img src="./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
                         <h4>Parc National des Calanques</h4>
                     </div>
                     <div>
                         <div>
-                            <img src="" alt="">
+                            <img src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
                             <h4>Notre-Dame-de-la-Garde</h4>
                         </div>
                         <div>
-                            <img src="" alt="">
+                            <img src="./images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
                             <h4>Parc Longchamp</h4>
                         </div>
                     </div>
