--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
                   </div>
                 </aside>
             </section>
-            <section>
+            <section id="contactivt">
                 <h2 id="activt">Activités à Marseille</h2>
                 <div class="grppic" >
-                    <div>
-                        <img src="./images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
+                    <div id="activ1">
+                        <img  src="./images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
                         <h4>Vieux Port</h4>
                     </div>
-                    <div>
+                    <div id="activ2" >
                         <div>
                             <img src="./images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
                             <h4>Fort de Pomègues</h4>
@@ -193,11 +193,11 @@
                             <h4>îles du Frioul</h4>
                         </div>
                     </div>
-                    <div>
+                    <div id="activ3">
                         <img src="./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
                         <h4>Parc National des Calanques</h4>
                     </div>
-                    <div>
+                    <div id="activ4">
                         <div>
                             <img src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
                             <h4>Notre-Dame-de-la-Garde</h4>
