debug imprevu enfin et finalement résolu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
         </header>
         <main>
-            <section>
+            <div class="section">
                 <h1 id="titre">Trouvez votre hébergement pour des vacances de rêve</h1>
                 <h3 id="vilnatur">En pleine ville ou en pleine nature</h3>
                 <div class="form" id="choix">
@@ -46,7 +46,7 @@
                         <input type="text" value="Animaux autorisés">
                     </form>
                 </div>
-            </section>
+            </div>
             <section class="pilier" >
                 <section id="gdpic">
                     <h2 id="hebrgmars">Hébergements à Marseille</h2>
