--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <header>
             <div id="marque"><img src="./images/logo/Reservia.svg" alt="" ></div>
             <nav class="nav-up">
-                <li><a href="#hebrgmars">Hébergements</a></li>
-                <li><a href="#activt">Activités</a></li>
-                <li><a href="https://openclassrooms.com/fr/">S'inscrire</a></li>
+                <li id="li-heb"><a href="#hebrgmars">Hébergements</a></li>
+                <li id="li-activ"><a href="#activt">Activités</a></li>
+                <li id="li-inscript"><a href="https://openclassrooms.com/fr/">S'inscrire</a></li>
             </nav>
         </header>
         <main>
@@ -137,7 +137,7 @@
                     </div>
                   <div class="gaside">
                     <div id="1" class="picaside">
-                        <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="" width="300px" height="220px">
+                        <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="" >
                         <div class="haside">
                             <h3>Hôtel Le Soleil Du Matin</h3>
                             <h4>Nuit à partir de 128euros</h4>
@@ -152,7 +152,7 @@
                     </div>
 
                     <div id="2" class="picaside">
-                        <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="" width="300px" height="220px">
+                        <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="" >
                         <div class="haside">
                             <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                             <h4>Nuit à partir de 71euros</h4>
@@ -170,7 +170,7 @@
                   </div>
 
                   <div id="3" class="picaside">
-                        <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="" width="300px" height="220px">
+                        <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="" >
                         <div class="haside">
                             <h3>Hôtel Tout Bleu et Blanc</h3>
                             <h4>Nuit à partir de 68euros</h4>
