--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <form  action="paspret.js" method="POST" title="form">
                         <label>Filtres</label>
 
-                        <div id="eco"> <!--  tous les input faudra les revoir au detail pour savoir pourquoi ils se mettent en column quand tu les assemble avec les bonnes balises -->
+                        <div id="eco"> <!--  tous les input il faudra les revoir au detail pour savoir pourquoi ils se mettent en column quand tu les assemble avec les bonnes balises -->
                             <i class="fas fa-money-bill-wave" style="color: #0065FC; background-color: #DEEBFF;" ></i>
                             <input type="text" name="" value="Economique" style="border: 2px solid #DEEBFF;">
                             <i class="fas fa-child" style="color: rgb(77, 148, 255);"></i>
