--- a/index.html
+++ b/index.html
@@ -25,5 +25,15 @@
         <li>Leurs recettes</li>
       </ul>
       
+        <section>
+            <aside>
+                <h1>À propos de l'auteur</h1>
+                <p>C'est moi, Zozor ! Je suis né un 23 novembre 2005.</p>
+            </aside>
+            <article>                
+                <h1>Je suis un grand voyageur</h1>
+                <p>Bla bla bla bla (texte de l'article)</p>
+            </article>
+        </section>
     </body>
 </html>
