bonne petite evolution

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1">>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>C'est reparti après un super vieux bug</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         
@@ -211,11 +211,11 @@
                         <h4 style="font-size: 30px; font-weight: normal;">Vieux Port</h4>
                     </div>
                     <div id="activ2" >
-                        <div>
+                        <div class="divon">
                             <img src="./images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
                             <h4 style="font-size: 30px; font-weight: normal;">Fort de Pomègues</h4>
                         </div>
-                        <div>
+                        <div class="divon">
                             <img src="./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
                             <h4 style="font-size: 30px; font-weight: normal;">îles du Frioul</h4>
                         </div>
@@ -225,11 +225,11 @@
                         <h4 style="font-size: 30px; font-weight: normal;">Parc National des Calanques</h4>
                     </div>
                     <div id="activ4">
-                        <div>
+                        <div class="divon">
                             <img src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
                             <h4 style="font-size: 30px; font-weight: normal;">Notre-Dame-de-la-Garde</h4>
                         </div>
-                        <div>
+                        <div class="divon">
                             <img src="./images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
                             <h4 style="font-size: 30px; font-weight: normal;">Parc Longchamp</h4>
                         </div>
@@ -256,5 +256,6 @@
                 <h4 style="font-size: 30px;  font-weight: lighter;">Nous contacter</h4>
             </div>
         </footer>
+
     </body>
 </html>
