--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
                     </form>
                 </div>
             </div>
+            <div class="info">
+                    <!--voici normalement l'icone a utiliser au lieu de celui ci-dessous. Mais il est sous utilisation pro: <i class="fal fa-info-circle"></i> -->  
+                    <p><i class="fas fa-info-circle"></i>Plus de 500 logements sont disponibles dans cette ville</p>
+                </div>
             <section class="pilier" >
+                
                 <section id="gdpic">
                     <h2 id="hebrgmars">Hébergements à Marseille</h2>
                     <section id="grp-pic">
