suite debug filtre

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <header>
             <div id="marque"><img src="./images/logo/Reservia.svg" alt="" ></div>
             <nav class="nav-up">
-                <li id="li-heb"><a href="#hebrgmars">Hébergements</a></li>
-                <li id="li-activ"><a href="#activt">Activités</a></li>
-                <li id="li-inscript"><a href="https://openclassrooms.com/fr/">S'inscrire</a></li>
+                <p id="li-heb"><a href="#hebrgmars">Hébergements</a></p>
+                <p id="li-activ"><a href="#activt">Activités</a></p>
+                <p id="li-inscript"><a href="https://openclassrooms.com/fr/">S'inscrire</a></p>
             </nav>
         </header>
         <main>
@@ -37,7 +37,7 @@
                     <form class="filtr"  action="paspret.js" method="POST" title="form">
                         <label>Filtres</label>
 
-                        <div id="eco"> <!--  tous les input il faudra les revoir au detail pour savoir pourquoi ils se mettent en column quand tu les assemble avec les bonnes balises -->
+                        <div id="eco">
                             <div class="icon">
                                 <i class="fas fa-money-bill-wave"></i>
                             </div>                   
