--- a/index.html
+++ b/index.html
@@ -282,9 +282,9 @@
                 <h4 style="  font-weight: lighter;">Soumettre votre hôtel</h4>
             </div>
             <div>
-                <h3 style="font-size: 40px; font-weight: bold;">Assistance</h3>
-                <h4 style="font-size: 30px;  font-weight: lighter;">Centre d'aide</h4>
-                <h4 style="font-size: 30px;  font-weight: lighter;">Nous contacter</h4>
+                <h3 style="font-weight: bold;">Assistance</h3>
+                <h4 style="font-weight: lighter;">Centre d'aide</h4>
+                <h4 style="font-weight: lighter;">Nous contacter</h4>
             </div>
         </footer>
 
