--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fal fa-star"></i>
+                                <i class="fas fa-star"></i>
                             </div>
                         </div>
                     </div>
@@ -287,6 +287,23 @@
                 <h4 style="font-weight: lighter;">Nous contacter</h4>
             </div>
         </footer>
-
+        <div class="Pfiltry">
+            <div class="filtry">
+                <div id="idfiltry">Filtres</div>
+                <div id="ecotry">Economique</div>
+            </div>
+            <div class="filtry">
+                <div id="idfiltry">Filtres</div>
+                <div id="ecotry">Economique</div>
+            </div>
+            <div class="filtry">
+                <div id="idfiltry">Filtres</div>
+                <div id="ecotry">Economique</div>
+            </div>
+            <div class="filtry">
+                <div id="idfiltry">Filtres</div>
+                <div id="ecotry">Economique</div>
+            </div>
+        </div>
     </body>
 </html>
