--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
                     </div>
                     <div class="patrouille">
                         <div>
-                            <figure emplduo>
+                            <figure class="emplduo" id="pfgcd1">
                                 <img id="fgcd1" src="./images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
                                 <figcaption>Cest un sous-ensemble</figcaption>
                             </figure> 
-                            <figure>
+                            <figure id="pfgcd2">
                                 <img id="fgcd2" src="./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
                                 <figcaption>2e sous-ensemble</figcaption>   
                             </figure>                     
@@ -248,7 +248,7 @@
                     </div>
                     <div class="patrouille">
                         <div>
-                            <figure>
+                            <figure id="pfgcs2">
                                 <img class="emplwoan" id="fgcs2" src="./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
                                 <figcaption>On teste toujours là</figcaption>
                             </figure>
@@ -256,11 +256,11 @@
                     </div>
                         <!-- <div> y a peut etre un div qui mange toutes ces "figure" en bas -->
                         <div>   
-                            <figure class="emplduo">
+                            <figure class="emplduo" id="pfgcd3">
                                 <img id="fgcd3" src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
                                 <figcaption>Cest un sous-ensemble</figcaption>
                             </figure> 
-                            <figure class="emplduo">
+                            <figure class="emplduo" id="pfgcd4">
                                 <img id="fgcd4" src="./images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
                                 <figcaption>2e sous-ensemble</figcaption>   
                             </figure>                     
