css externé et formulaires et ajoutés

--- a/index.html
+++ b/index.html
@@ -218,12 +218,9 @@
                 </aside>
             </section>
             
-
-
-
             <!--  Partie test pour contactiv -->
             <div class="boss">
-                <div id="HbM">
+                <div id="hbm">
                     <h2>Activités à Marseille</h2>
                 </div >
                 <div class="actMars">
@@ -236,7 +233,7 @@
                     <div class="patrouille">
                         <div>
                             <figure class="emplduo" id="pfgcd1">
-                                <img id="fgcd1" src="./images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
+                                <img id="fgcd1" src="./images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
                                 <figcaption>Cest un sous-ensemble</figcaption>
                             </figure> 
                             <figure id="pfgcd2">
@@ -254,8 +251,7 @@
                             </figure>
                         </div>
                     </div>
-                        <!-- <div> y a peut etre un div qui mange toutes ces "figure" en bas -->
-                        <div>   
+                        <div class="patrouille" >   
                             <figure class="emplduo" id="pfgcd3">
                                 <img id="fgcd3" src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
                                 <figcaption>Cest un sous-ensemble</figcaption>
@@ -277,20 +273,20 @@
         </main>
         <footer>
             <div>
-                <h3 style="  font-weight: bold;">A propos</h3>
-                <h4 style="  font-weight: lighter;">Fonctionnement du Site </h4>
-                <h4 style="  font-weight: lighter;">Conditions générales de vente</h4>
-                <h4 style="  font-weight: lighter;">Données et Confidentialité</h4>
+                <h3>A propos</h3>
+                <h4>Fonctionnement du Site </h4>
+                <h4>Conditions générales de vente</h4>
+                <h4>Données et Confidentialité</h4>
             </div>
             <div>
-                <h3 style="  font-weight: bold;">Nos hébergements</h3>
-                <h4 style="  font-weight: lighter;">Charte Qualité</h4>
-                <h4 style="  font-weight: lighter;">Soumettre votre hôtel</h4>
+                <h3>Nos hébergements</h3>
+                <h4>Charte Qualité</h4>
+                <h4>Soumettre votre hôtel</h4>
             </div>
             <div>
-                <h3 style="font-weight: bold;">Assistance</h3>
-                <h4 style="font-weight: lighter;">Centre d'aide</h4>
-                <h4 style="font-weight: lighter;">Nous contacter</h4>
+                <h3>Assistance</h3>
+                <h4>Centre d'aide</h4>
+                <h4>Nous contacter</h4>
             </div>
         </footer>
         <div class="Pfiltry">
