--- a/index.html
+++ b/index.html
@@ -36,13 +36,18 @@
                 <div class="form" id="filtre">
                     <form class="filtr"  action="paspret.js" method="POST" title="form">
                         <label>Filtres</label>
+                       
+                        <!-- -->
 
                         <div id="eco">
                             <div class="icon">
                                 <i class="fas fa-money-bill-wave"></i>
-                            </div>                   
-                            <input id="incot" type="text" name="" value="Economique">
-                        </div>                       
+                            </div>
+                            <input id="autocon" type="text" value="Economique">
+                        </div>                    
+                        
+                        <!-- -->
+
                         <div id="famil">
                             <div class="icon">
                                 <i class="fas fa-child" ></i>
@@ -305,6 +310,11 @@
             <div class="filtry">
                 <div id="idfiltry">Filtres</div>
                 <div id="ecotry">Economique</div>
+            </div>
+
+            <div class="filtry">
+                <div id="idfiltry">Filtres</div>
+                <input id="ecotry" value="Economique"></input>
             </div>
         </div>
     </body>
