--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star" id="#grey-star1-1"></i>
+                                <i class="fas fa-star" id="#greystar101"></i>
                             </div>
                         </div>
                         <div class="phototel">
@@ -153,7 +153,7 @@
                         </div>
                     </section>
                     <h3>
-                        <a href="https://grafikart.fr/" target="_blank">Afficher plus</a>
+                        <a href="https://grafikart.fr/" id="afich" target="_blank">Afficher plus</a>
                     </h3>
                     
                 </section>
@@ -241,7 +241,7 @@
                                 <img id="fgcd1" src="./images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
                                 <figcaption>Cest un sous-ensemble</figcaption>
                             </figure> 
-                            <figure id="pfgcd2">
+                            <figure class="emplduo" id="pfgcd2">
                                 <img id="fgcd2" src="./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
                                 <figcaption>2e sous-ensemble</figcaption>   
                             </figure>                     
@@ -294,28 +294,5 @@
                 <h4>Nous contacter</h4>
             </div>
         </footer>
-        <div class="Pfiltry">
-            <div class="filtry">
-                <div id="idfiltry">Filtres</div>
-                <div id="ecotry">Economique</div>
-            </div>
-            <div class="filtry">
-                <div id="idfiltry">Filtres</div>
-                <div id="ecotry">Economique</div>
-            </div>
-            <div class="filtry">
-                <div id="idfiltry">Filtres</div>
-                <div id="ecotry">Economique</div>
-            </div>
-            <div class="filtry">
-                <div id="idfiltry">Filtres</div>
-                <div id="ecotry">Economique</div>
-            </div>
-
-            <div class="filtry">
-                <div id="idfiltry">Filtres</div>
-                <input id="ecotry" value="Economique"></input>
-            </div>
-        </div>
     </body>
 </html>
