--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <h2>Activités à Marseille</h2>
                 </div >
                 <div class="actMars">
-                    <div class="patrouille">
+                    <div class="patrouille" id="soupatrouill">
                         <figure class="emplwoan">
                             <img id="fgcs1" src="./images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
                             <figcaption>On teste d'abord </figcaption>
@@ -249,7 +249,7 @@
                         
                     </div>
                     <div class="patrouille">
-                        <div>
+                        <div class="soupatrouill">
                             <figure id="pfgcs2">
                                 <img class="emplwoan" id="fgcs2" src="./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
                                 <figcaption>On teste toujours là</figcaption>
